[gd_scene load_steps=5 format=3 uid="uid://dygjq4gkwhjxs"]

[ext_resource type="Script" uid="uid://wgbfodsn108a" path="res://scenes/SeedShopPlantCard/seed_shop_popup.gd" id="1_hjdk2"]
[ext_resource type="Texture2D" uid="uid://cwcao3b8wi4pn" path="res://assets/ui_elements/seed_bag.png" id="1_mlxiu"]
[ext_resource type="Texture2D" uid="uid://wrryrx1cvr4i" path="res://assets/plants/sunflower_anims/sunflower_image.png" id="2_414lr"]
[ext_resource type="PackedScene" uid="uid://buev7i4viyf3s" path="res://scenes/CoinSlot/coin_slot.tscn" id="4_ifw3u"]

[node name="SeedShopPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 340.0
offset_bottom = 443.0
scale = Vector2(0.167384, 0.167384)
script = ExtResource("1_hjdk2")

[node name="CardBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_mlxiu")

[node name="DescriptionText" type="Label" parent="CardBackground"]
layout_mode = 0
offset_left = 72.0
offset_top = 262.0
offset_right = 270.0
offset_bottom = 363.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Descriptive text of the 
card above!"
autowrap_mode = 2

[node name="Icon" type="TextureRect" parent="CardBackground"]
layout_mode = 0
offset_left = 44.0
offset_top = 37.0
offset_right = 444.0
offset_bottom = 367.0
scale = Vector2(0.590677, 0.590677)
texture = ExtResource("2_414lr")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 341.0
offset_bottom = 434.0

[node name="CoinSlot" parent="." instance=ExtResource("4_ifw3u")]
position = Vector2(71.6914, 101.563)
scale = Vector2(2.19486, 2.19486)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="on_coin_deposited" from="CoinSlot" to="." method="_on_coin_slot_on_coin_deposited"]
